// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformExecutionResult > should correctly link total items with measure items with order property 1`] = `
{
  "count": [
    1,
    2,
  ],
  "data": [
    [
      "1",
      "2",
      "3",
      "4",
      "5",
    ],
  ],
  "headerItems": [
    [
      [
        {
          "attributeHeaderItem": {
            "name": "First",
            "uri": "FirstLabel",
          },
        },
        {
          "attributeHeaderItem": {
            "name": "Second",
            "uri": "SecondLabel",
          },
        },
        {
          "totalHeaderItem": {
            "name": "sum",
            "type": "sum",
          },
        },
        {
          "totalHeaderItem": {
            "name": "sum",
            "type": "sum",
          },
        },
        {
          "totalHeaderItem": {
            "name": "max",
            "type": "max",
          },
        },
      ],
    ],
    [
      [
        {
          "measureHeaderItem": {
            "name": "Sum of duration",
            "order": 0,
          },
        },
        {
          "measureHeaderItem": {
            "name": "Sum of amount",
            "order": 1,
          },
        },
        {
          "measureHeaderItem": {
            "name": "Sum of duration",
            "order": 0,
          },
        },
        {
          "measureHeaderItem": {
            "name": "Sum of amount",
            "order": 1,
          },
        },
        {
          "measureHeaderItem": {
            "name": "Sum of amount",
            "order": 1,
          },
        },
      ],
    ],
  ],
  "offset": [
    0,
    0,
  ],
  "total": [
    1,
    2,
  ],
}
`;

exports[`transformExecutionResult > should format date dimensions values 1`] = `
{
  "count": [
    1,
    2,
  ],
  "data": [
    [
      "20.0",
      "40.2",
    ],
  ],
  "headerItems": [
    [
      [
        {
          "measureHeaderItem": {
            "name": "Sum of duration",
            "order": 0,
          },
        },
      ],
    ],
    [
      [
        {
          "attributeHeaderItem": {
            "name": "1906-4",
            "uri": "1906-4",
          },
        },
        {
          "attributeHeaderItem": {
            "name": "1910-1",
            "uri": "1910-1",
          },
        },
      ],
    ],
  ],
  "offset": [
    0,
    0,
  ],
  "total": [
    1,
    2,
  ],
}
`;

exports[`transformExecutionResult > should format date dimensions values with date format information 1`] = `
{
  "count": [
    1,
    2,
  ],
  "data": [
    [
      "20.0",
      "40.2",
    ],
  ],
  "headerItems": [
    [
      [
        {
          "measureHeaderItem": {
            "name": "Sum of duration",
            "order": 0,
          },
        },
      ],
    ],
    [
      [
        {
          "attributeHeaderItem": {
            "formattedName": "Q4 1906",
            "name": "1906-4",
            "uri": "1906-4",
          },
        },
        {
          "attributeHeaderItem": {
            "formattedName": "Q1 1910",
            "name": "1910-1",
            "uri": "1910-1",
          },
        },
      ],
    ],
  ],
  "offset": [
    0,
    0,
  ],
  "total": [
    1,
    2,
  ],
}
`;
